<resources>
    <string name="app_name">QuickScanneR</string>
    <string name="title_events">Events</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_announcements">Announcements</string>
    <string name="profile">Profile</string>
    <string name="button_profile_description">Opens up profile\n</string>
    <string name="App_Name">Quick_scanneR</string>
    <string name="notification">Notification\n</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_events">My Events</string>
    <string name="settings">Settings</string>
    <string name="admin_page">Admin Page</string>
    <string name="CreateEventButton">Swipe to Create an Event</string>
    <string name="AddEvent_text">This is the Add Event Page</string>
    <string name="notifications">Notifications:</string>
    <string name="CreateEventInsideBtn">Create Event</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="organizers">Organizers</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="activity_viewevent_textview">The event that was clicked is passed as a parameter to this activity. The Event Name is: </string>
    <string name="LoremIpsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dolor leo, fringilla ut ipsum quis, aliquam molestie justo. Nullam at lacus elit. Praesent molestie arcu non fermentum fringilla. Nunc quis orci sed ipsum placerat iaculis in pharetra sapien. Morbi porta dictum nisi, id molestie enim semper ut. In hac habitasse platea dictumst. Ut finibus vitae quam nec tempor. Donec eu vehicula sem. Vivamus sit amet sodales enim. "</string>
    <string name="long_description">Long Description</string>
    <string name="expandable_arrow">Expandable Arrow</string>
    <string name="short_description">Short Description</string>
    <string name="event_description">Default Text: When working with time-related data, it\'s also important to consider how you will store and retrieve the data from your data source (e.g., database, network, etc.). You may need to convert the time values to a format suitable for storage and retrieval, such as Unix timestamps or ISO 8601 formatted strings.</string>

    <string name="options">options</string>
    <string name="event_name">Event Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="edit">Edit</string>
    <string name="attendance_list">Attendance List</string>
    <string name="qr_code_check_in">QR code (check in)</string>
    <string name="qr_code_promotional">QR code (Promotional)</string>
    <string name="map">Map</string>
    <string name="delete">Delete</string>
    <string name="grant_permission"><![CDATA[This app needs location permission to function. You can grant them in app settings. Go to Permissions -> Location -> Allow.]]></string>
    <string name="enable_geolocation">Enable Geolocation First!</string>
    <string name="geopoint">GeoPoint</string>
    <string name="maxattendee">MaxSpots</string>
    <string name="sign_up_text">sign up to attend event</string>
    <string name="profile_name">Profile Name</string>
    <string name="image_view">Image View</string>
</resources>