<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/admin_activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ECE4E4">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Admin Home Page"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/BrowseEventsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Browse Events"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#4F8E05"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/BrowseImagesButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Browse Images"
        android:layout_below="@+id/BrowseEventsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="#4F8E05"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/BrowseProfilesButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Browse Profiles"
        android:layout_below="@+id/BrowseImagesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="#4F8E05"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/AdminQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BrowseProfilesButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="143dp"
        android:text="Admin QR" />


</RelativeLayout>
