<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_events"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_qr_code_scanner_24"
        android:title="@string/title_scanner"
        app:showAsAction="never" />
    <item
        android:id="@+id/navigation_announcements"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_announcements"
        app:showAsAction="never" />



</menu>