<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_attending_events"
        android:title="Attending"
        android:icon="@drawable/attending_event"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/navigation_organized_events"
        android:title="Organized"
        android:icon="@drawable/microphone_svg"
        app:showAsAction="never" />




</menu>